Add tests; set Java version; publish.