@@ -1,10 +1,12 @@
 plugins {
 	id("java")
+	id("maven-publish")
 	id("net.auoeke.gronk").version("latest.release")
 }
 
 group("net.auoeke")
 version("0.0.0")
+javaVersion(17)
 
 repositories {
     mavenCentral()
@@ -15,6 +17,15 @@ dependencies {
     testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
 }
 
+compileTestJava {
+	targetCompatibility = sourceCompatibility = JavaVersion.current()
+	options.compilerArgs << "--enable-preview"
+}
+
 test {
-    useJUnitPlatform()
+	useJUnitPlatform()
+}
+
+java {
+	withJavadocJar()
 }
